embedded the create entry scene in nav controller so nav bar shows up

--- a/Journal - CoreData/Journal - CoreData/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal - CoreData/Journal - CoreData/Storyboard/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="o6L-uH-0Wc">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="bAC-Rh-3xV">
                             <connections>
-                                <segue destination="aVG-wK-7JU" kind="presentation" identifier="AddEntryModalSegue" modalPresentationStyle="fullScreen" id="5sq-GZ-NVy"/>
+                                <segue destination="dIU-w1-nfq" kind="presentation" identifier="AddEntryModalSegue" modalPresentationStyle="fullScreen" id="5sq-GZ-NVy"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -144,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DOm-Oq-mMa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1535" y="-545"/>
+            <point key="canvasLocation" x="1496" y="112"/>
         </scene>
         <!--Create Entry-->
         <scene sceneID="xor-qD-Xhv">
@@ -228,7 +228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gL6-Zd-6na" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1535" y="112"/>
+            <point key="canvasLocation" x="2252" y="-589"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1ga-10-beF">
@@ -247,6 +247,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1BL-7Z-PQ3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-26.086956521739133" y="111.83035714285714"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ag3-hg-ycS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dIU-w1-nfq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vUu-DK-qs8">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aVG-wK-7JU" kind="relationship" relationship="rootViewController" id="Sig-1t-RuU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LcM-Ox-Xli" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1495.6521739130435" y="-588.61607142857144"/>
         </scene>
     </scenes>
 </document>
