Added refresh function

--- a/Journal/Journal/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboard/Base.lproj/Main.storyboard
@@ -84,6 +84,9 @@
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="2LJ-r6-9ff">
                         <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="JKz-8N-fCP" eventType="valueChanged" id="LzY-Oy-yGi"/>
+                        </connections>
                     </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v3f-B0-6eU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
