--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -16,15 +16,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="uIY-TW-Lid">
-                                <rect key="frame" x="15" y="103" width="384" height="272"/>
+                                <rect key="frame" x="15" y="103" width="384" height="318"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jRd-Lr-FQi">
                                         <rect key="frame" x="0.0" y="0.0" width="384" height="22"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="FZk-eD-HgD">
+                                        <rect key="frame" x="0.0" y="37" width="384" height="32"/>
+                                        <segments>
+                                            <segment title="😥"/>
+                                            <segment title="😐"/>
+                                            <segment title="😄"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Egk-C1-MUN">
-                                        <rect key="frame" x="0.0" y="37" width="384" height="235"/>
+                                        <rect key="frame" x="0.0" y="83" width="384" height="235"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYt-Pu-3IV">
                                                 <rect key="frame" x="0.0" y="0.0" width="384" height="17"/>
@@ -75,13 +83,94 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="moodSegmentedControl" destination="FZk-eD-HgD" id="Gxu-uW-lg6"/>
                         <outlet property="notesTextView" destination="PtT-Jl-eDa" id="R3g-oZ-qTf"/>
                         <outlet property="titleTextField" destination="jRd-Lr-FQi" id="f7L-LY-ujn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="921.73913043478262" y="137.94642857142856"/>
+            <point key="canvasLocation" x="967" y="-200"/>
+        </scene>
+        <!--Entry Details-->
+        <scene sceneID="lwf-YZ-p1p">
+            <objects>
+                <viewController id="Wmq-BZ-BNv" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ck5-if-wwb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="XnN-Tt-TB5">
+                                <rect key="frame" x="15" y="155" width="384" height="318"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lQy-wS-0ao">
+                                        <rect key="frame" x="0.0" y="0.0" width="384" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ony-pq-Zyp">
+                                        <rect key="frame" x="0.0" y="37" width="384" height="32"/>
+                                        <segments>
+                                            <segment title="😥"/>
+                                            <segment title="😐"/>
+                                            <segment title="😄"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wqB-V4-mIP">
+                                        <rect key="frame" x="0.0" y="83" width="384" height="235"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ra0-aa-NPH">
+                                                <rect key="frame" x="0.0" y="0.0" width="384" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IMv-is-SKq">
+                                                <rect key="frame" x="0.0" y="25" width="384" height="2"/>
+                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="n4o-n3-LgS"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vaI-fS-ue8">
+                                                <rect key="frame" x="0.0" y="35" width="384" height="200"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="btA-2I-PNg"/>
+                                                </constraints>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="XnN-Tt-TB5" firstAttribute="leading" secondItem="ck5-if-wwb" secondAttribute="leading" constant="15" id="3kt-yE-IwO"/>
+                            <constraint firstItem="XnN-Tt-TB5" firstAttribute="top" secondItem="iin-hR-lyG" secondAttribute="top" constant="15" id="LDZ-zS-uMB"/>
+                            <constraint firstItem="iin-hR-lyG" firstAttribute="trailing" secondItem="XnN-Tt-TB5" secondAttribute="trailing" constant="15" id="xba-V8-enP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="iin-hR-lyG"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="kaA-gv-wGj">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="ZYh-ot-Lqj">
+                            <connections>
+                                <action selector="editButton:" destination="Wmq-BZ-BNv" id="iAc-6X-vgG"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="moodSegmentedControl" destination="ony-pq-Zyp" id="JWF-m2-RzR"/>
+                        <outlet property="notesTextView" destination="vaI-fS-ue8" id="EBf-fa-rcq"/>
+                        <outlet property="titleTextField" destination="lQy-wS-0ao" id="kyt-ti-bTY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ase-hB-DF3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="261" y="469"/>
         </scene>
         <!--Journal-->
         <scene sceneID="BTV-vO-9J7">
@@ -140,6 +229,7 @@
                                     <outlet property="dateLabel" destination="1OH-mm-9tN" id="pOG-Du-sAk"/>
                                     <outlet property="notesLabel" destination="WTZ-yv-09f" id="tQx-D6-HIL"/>
                                     <outlet property="titleLabel" destination="Eat-nm-7G0" id="c2L-WL-dGh"/>
+                                    <segue destination="Wmq-BZ-BNv" kind="show" identifier="EntryDetailVC" id="wIm-dm-oPW"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -194,7 +284,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aqh-Kv-c2W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="217" y="138"/>
+            <point key="canvasLocation" x="261" y="-200"/>
         </scene>
     </scenes>
     <resources>
